# GutenOCR

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml
benchmarks/grounding-bench/: README.md  build.py  sample.py
benchmarks/grounding-bench/diversity/: analyze_threshold.py  prepare_upload.py  pyproject.toml  rank.py  sampler.py  visual_utils.py
data/google_vision_ocr/: README.md  __init__.py  google_vision_ocr_extraction.py
data/grounded_latex/: cleanup_incomplete.sh  count_success.sh  generate_equations.py  shard_dataset.py  visualize_bbox.ipynb
data/idl/: batch_standardize.py  compress_parallel.sh  standardize.py
data/pubmed/: README.md  download_parallel.sh  format_ocr_json.py  process_pubmed_ocr.py  retry_failed_ocr.py  visualize_pubmed_ocr.py
data/synthdog_grounding/: README.md  __init__.py  pillow_compat.py  requirements-synthdog.txt  template.py
data/tabmepp/: download.sh  standardize.py  standardize_parquet.py
docs/: roadmap.md
experiments/qwen-multigpu-sft/: args.py  prompt_builder.py  sft_clean.py  split_wds_pairs_tar.py  system_prompt.txt  tasks.csv
experiments/vllm-fox/: README.md  common.py  eval_runner.py  fox_eval.py  prompt_extractors.py  requirements_vllm.txt  vllm_ocr_predictor.py
experiments/vllm-ocr-eval/: conditional_detection.sh  conditional_detection_score.sh  dataset.py  detection.sh  detection_score.sh  localized_reading.sh  localized_reading_score.sh  predictor.py  (+13 more)
(+25 files in other folders)
